--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,38 @@
-.App {
-  text-align: center;
+hr {
+  margin: 50px 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+img {
+  min-width: 150px;
+  min-height: 161px;
+}
+.navbar-toggler {
+  border: none;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.navbar-toggler:focus {
+  outline: none;
 }
 
-.App-title {
-  font-size: 1.5em;
+@media (min-width: 576px) {
+  .navbar-nav {
+    width: 100%;
+  }
+  #nameText {
+    font-size: 32pt;
+  }
+  img {
+    margin-right: 20px;
+  }
 }
 
-.App-intro {
-  font-size: large;
-}
+@media (max-width: 576px) {
+  .d-flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  img {
+    margin-bottom: 20px;
+  }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
