contact form working

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ img {
   vertical-align: middle;
 }
 h4 {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 h5{
   color: #43617D;
@@ -29,7 +29,23 @@ ul {
 }
 
 table {
-  margin-top: 30px;
+  margin-top: 20px;
+}
+
+.card-title {
+  margin-top: 10px;
+}
+
+.card-subtitle {
+  font-size: 10pt;
+  margin-bottom: 15px;
+}
+.projectCard{
+  max-width: 500px;
+  margin: 40px 10px;
+}
+.projectsDiv {
+  margin-top: 40px;
 }
 @media (min-width: 576px) {
   .navbar-nav {
@@ -39,7 +55,7 @@ table {
     font-size: 32pt;
   }
   img {
-    margin-right: 20px;
+    margin-right: 40px;
   }
   #show-more-button{
     color: #BAB3AA;
