--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,15 @@ hr {
   margin: 50px 0;
 }
 
-img {
+#self-portrait {
   min-width: 150px;
   min-height: 161px;
 }
+
+#gmailLogo {
+  margin-right: 10px;
+}
+
 .navbar-toggler {
   border: none;
 }
@@ -20,6 +25,7 @@ img {
 }
 h4 {
   margin-bottom: 30px;
+  text-align: center;
 }
 h5{
   color: #43617D;
@@ -47,6 +53,20 @@ table {
 .projectsDiv {
   margin-top: 40px;
 }
+
+#contact-form {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.logoDiv {
+  max-width: 500px;
+  margin: 40px auto;
+}
+
+.btn {
+  margin-bottom: 60px;
+}
 @media (min-width: 576px) {
   .navbar-nav {
     width: 100%;
@@ -54,7 +74,7 @@ table {
   #nameText {
     font-size: 32pt;
   }
-  img {
+  #self-portrait {
     margin-right: 40px;
   }
   #show-more-button{
@@ -69,7 +89,7 @@ table {
     flex-direction: column;
     align-items: center;
   }
-  img {
+  #self-portrait {
     margin-bottom: 20px;
   }
 
