--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,7 @@ table {
   #self-portrait {
     margin-right: 40px;
   }
-  #show-more-button{
+  .show-more-button{
     color: #BAB3AA;
     text-align: center;
     margin-top: 20px;
