--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,13 @@ hr {
   min-height: 161px;
 }
 
+.blueBackground {
+  background-color: blue;
+}
+video {
+  max-width: 100%;
+  max-height: 100%;
+}
 #gmailLogo {
   margin-right: 10px;
 }
